hope to fix footer on mobile

--- a/style.css
+++ b/style.css
@@ -508,4 +508,7 @@ li a:hover {
     width: 80%;
     padding-top: 7rem;
   }
+  .footer {
+    height: 100%;
+  }
 }
